# nlp_hf_course

./: LICENSE  README.md  pyproject.toml
src/: main.py  transformers_models.py
